--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: ghostwhite;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: darkgrey;
 }
 
 body {
@@ -44,11 +44,12 @@ button {
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
+  color: ghostwhite;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: darkgrey;
 }
 button:focus,
 button:focus-visible {
@@ -61,9 +62,9 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: ghostwhite;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #213547;
   }
 }
