--- a/src/pages/css/Pages.css
+++ b/src/pages/css/Pages.css
@@ -1,14 +1,14 @@
 .page {
-  position: fixed;
-  top: 0;
+  /* position: fixed; */
+  /* top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  padding: 50px;
+  margin: 10px;
 }
 
 .bar-button {
