--- a/src/pages/css/Pages.css
+++ b/src/pages/css/Pages.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  margin: 10px;
+  /* margin: 10px; */
 }
 
 .bar-button {
