--- a/src/demo/main.css
+++ b/src/demo/main.css
@@ -15,12 +15,12 @@ body {
   font-size: 16px;
 }
 
-.orange {
+.green {
   background-color: #A2FF3A;
   opacity: 0.4;
 }
 
-.red {
+.yellow {
   background-color: #FCEB56;
   opacity: 0.6;
 }
