fix: run prettier-write

--- a/src/demo/main.css
+++ b/src/demo/main.css
@@ -16,11 +16,11 @@ body {
 }
 
 .green {
-  background-color: #A2FF3A;
+  background-color: #a2ff3a;
   opacity: 0.4;
 }
 
 .yellow {
-  background-color: #FCEB56;
+  background-color: #fceb56;
   opacity: 0.6;
 }
